1. 补充多个版本的jdk 2. 仓库ssh改用https，减少限流的情况 3. 运行的jar不依赖于项目名 4. 从云上拉取代码 5. 右侧面板支持控制是否自动换行 6. 文件支持下载 7. 新增标签页菜单 8. 加入终端